feat(UI): Add logo/favicons and PWA manifest
